--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav li
 nav a
 {
     font-size: 1.3em;
-    color: #181818;
+    color: #1316be;
     padding-bottom: 3px;
     text-decoration: none;
 }
