--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ header h1
     font-size: 2.5em;
     font-weight: normal;
     margin: 0 0 0 10px;
+    color: #a80b0b;
 }
 
 header h2
@@ -248,6 +249,7 @@ footer p, footer ul
 footer h1
 {
     font-size: 1.1em;
+    color: #a80b0b;
 }
 
 
